# saplang

./: .clang-format  .gitignore  .vimspector.json  CMakeLists.txt  README.md  last_session.vim  run_tests.sh
.gitea/workflows/: tests.yaml
.github/workflows/: ci.yaml  cmake-multi-platform.yml  nightly.yaml  test_nightly.yaml  test_tests.yaml  tests.yaml
ci/: arm64-linux-build.sh  arm64-linux-debug-tests.sh  arm64-linux-debug.sh  arm_linux_build.sh  nightly_builds_potato.sh  toolchain-x86_64.cmake  x64_build.sh  x86_64-linux-build.sh  x86_64-linux-debug-tests.sh  x86_64-linux-debug.sh  x86_64-windows-build.bat  x86_64_linux_build.sh
compiler/: CMakeLists.txt
compiler/src/: arena.c  arena.h  ast.cpp  ast.h  cfg.cpp  cfg.h  codegen.c  codegen.cpp  codegen.h  constexpr.cpp  constexpr.h  driver.c  driver.cpp  driver.h  hashmap.c  hashmap.h  lexer.cpp  lexer.h  main.c  main.cpp  new_parser.cpp  new_parser.h  parser.c  parser.cpp  parser.h  scanner.c  scanner.h  sema.c  sema.cpp  sema.h  symbol_table.c  symbol_table.h  thread_pool.h  timer.c  types.c  types.h  util.c  util.h  utils.cpp  utils.h
old_tests/: cfg_tests.cpp  codegen_tests.cpp  parser_tests.cpp
old_tests/module_tests/pointer_to_generic_arg/: defs.sl  test.sl
old_tests/module_tests/visibility_generics/: test.sl
old_tests/module_tests/visibility_other_dir/: test.sl
old_tests/module_tests/visibility_other_dir/incl/: print.sl
old_tests/module_tests/visibility_structs_and_enums/: defs.sl  test.sl
rework/: CMakeLists.txt
rework/src/: driver.c  driver.h  main.c  parser.c  parser.h  scanner.c  scanner.h  thread_pool.c  timer.h  types.c  types.h  util.c  util.h
rework_tests/: CMakeLists.txt  parser_tests.c  parser_tests.h  runner.c
rework_tests/.runners/: parser_tests_runners.c
src/: ast.cpp  ast.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h  sema.cpp  sema.h  utils.cpp  utils.h
stage2/: io.sl  main.sl  scanner.sl
stage2/bindings/: ctype.sl  io.sl  string.sl
stage2/modules/: scanner.sl
tests/: >a  CMakeLists.txt  c2_tests.cpp  cfg_tests.cpp  codegen_tests.cpp  codegen_tests.h  constexpr_tests.cpp  hashmap_tests.h  lexer_01.sl  module_tests.cpp  module_tests.h  parser_01.sl  parser_02.sl  parser_tests.cpp  parser_tests.h  runner.c  scanner_tests.h  sema_tests.cpp  sema_tests.h  test_util.h  test_utils.h  threadpool_tests.h  typeinfo_tests.h
tests/module_tests/: run_exec.py  run_tests.sh
tests/module_tests/cycle_test/: a.sl  b.sl  main.sl
tests/module_tests/debug_info_basic/: main.sl
tests/module_tests/debug_info_lines/: main.sl
tests/module_tests/debug_info_locals/: main.sl
tests/module_tests/debug_info_types/: main.sl
tests/module_tests/file_io/: io.sl  test.sl
tests/module_tests/import_test/: io.sl  main.sl
tests/module_tests/null_test/: main.sl
tests/module_tests/slice_len_chain/: main.sl  sys.sl
tests/module_tests/slice_test/: main.sl
tests/module_tests/switch_test/: main.sl
tests/module_tests/visibility_extern/: defs.sl  test.sl
tests/module_tests/visibility_generics/: defs.sl
tests/module_tests/visibility_same_dir/: expected.txt
